force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <description>The Targets object is used to store sales user target records.</description>
    <label>Target</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Target</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>