force-app/main/default/objects/Target__c/fields/Bookings_Target_Apr__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Target_Apr__c</fullName>
    <description>This field displays the target owner&apos;s bookings target amount for the month of April.</description>
    <label>Bookings Target Apr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>