force-app/main/default/objects/Target__c/fields/Bookings_Target_Mar__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Target_Mar__c</fullName>
    <description>This field displays the target owner&apos;s bookings target amount for the month of March.</description>
    <label>Bookings Target Mar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>