force-app/main/default/objects/Target__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>This field displays the Business Unit assigned to the target record.</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALM</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>IMES</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>RIM Service</fullName>
            </value>
            <value>
                <fullName>RIM Storage</fullName>
            </value>
            <value>
                <fullName>W&amp;L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>