force-app/main/default/objects/Target__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>This field displays the target owner&apos;s Effective Start Date for the target record.</description>
    <label>Effective Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>