force-app/main/default/objects/Target__c/fields/Full_Annual_Booking_Target_12mo__c.field-meta.xml
<CustomField>
    <fullName>Full_Annual_Booking_Target_12mo__c</fullName>
    <description>This amount should equal a full 12 month booking target regardless of ramp and start date proation</description>
    <label>Full Annual Booking Target (12mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>