force-app/main/default/objects/Target__c/fields/Num_of_Target_Periods__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Target_Periods__c</fullName>
    <description>This is an automated field that counts the target owner&apos;s total number of target periods (months).</description>
    <formula>IF(

YTD_Target_End_Period__c  &gt;= YTD_Target_Start_Period__c, YTD_Target_End_Period__c - YTD_Target_Start_Period__c + 1, 0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Target Periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>