force-app/main/default/objects/Target__c/fields/Pipeline_Target_CQ__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Target_CQ__c</fullName>
    <description>This is an automated field that calculates the target owner&apos;s current quarter pipeline target amount based on 
the amounts entered in the current quarter target fields.</description>
    <formula>CASE(
CEILING( MONTH(TODAY()) / 3),
1, Pipeline_Target_Jan__c+Pipeline_Target_Feb__c+Pipeline_Target_Mar__c,
2, Pipeline_Target_Apr__c+Pipeline_Target_May__c+Pipeline_Target_Jun__c,
3, Pipeline_Target_Jul__c+Pipeline_Target_Aug__c+Pipeline_Target_Sep__c,
4, Pipeline_Target_Oct__c+Pipeline_Target_Nov__c+Pipeline_Target_Dec__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Target (CQ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>