force-app/main/default/objects/Target__c/fields/Pipeline_Target_Mar__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Target_Mar__c</fullName>
    <description>This field displays the target owner&apos;s pipeline target amount for the month of March.</description>
    <label>Pipeline Target Mar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>