force-app/main/default/objects/Target__c/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field displays the full name of the SVP assigned to the target owner.</description>
    <label>SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets4</relationshipName>
    <type>Lookup</type>
</CustomField>