force-app/main/default/objects/Target__c/fields/Target_Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Target_Owner_Is_Active__c</fullName>
    <description>This is an automated checkbox field that indicates if the target owner is active (checked) or inactive (unchecked).</description>
    <formula>Target_Owner__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Owner: Is Active</label>
    <type>Checkbox</type>
</CustomField>