force-app/main/default/objects/Target__c/fields/Target_Owner_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Owner_Role_Type__c</fullName>
    <description>This field displays the target owner&apos;s role type.</description>
    <label>Target Owner Role Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMD</fullName>
            </value>
            <value>
                <fullName>BDA</fullName>
            </value>
            <value>
                <fullName>BDE</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>ISR</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>RIM SDE</fullName>
            </value>
            <value>
                <fullName>SDE</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>SVP</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>