force-app/main/default/objects/Target__c/fields/Target_Owner_Sales_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Target_Owner_Sales_Sub_Segment__c</fullName>
    <description>This field displays the Sales Sub-Segment assigned to the target owner.</description>
    <label>Target Owner Sales Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALM</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Channels</fullName>
            </value>
            <value>
                <fullName>Digital Sales</fullName>
            </value>
            <value>
                <fullName>Digital SMB</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Enterprise SDR</fullName>
            </value>
            <value>
                <fullName>Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>GI SDR</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Library Services</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Portfolio A</fullName>
            </value>
            <value>
                <fullName>Portfolio B</fullName>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>SLED</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>