force-app/main/default/objects/Target__c/fields/Target_Weight__c.field-meta.xml
<CustomField>
    <fullName>Target_Weight__c</fullName>
    <description>This field displays the target weighted percentage of the target owner&apos;s total target.</description>
    <label>Target Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>