force-app/main/default/objects/Target__c/fields/Target_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Year__c</fullName>
    <description>This field indicates the target year.</description>
    <label>Target Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>