force-app/main/default/objects/Target__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field displays the full name of VP assigned to the target owner.</description>
    <label>VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets3</relationshipName>
    <type>Lookup</type>
</CustomField>