force-app/main/default/objects/Target__c/fields/YTD_Target_End_Period__c.field-meta.xml
<CustomField>
    <fullName>YTD_Target_End_Period__c</fullName>
    <description>This field displays the numeric month (1-12) that corresponds with the owner&apos;s &apos;Effective End Period&apos;.</description>
    <formula>month(today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Target End Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>