force-app/main/default/objects/Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Year__c</columns>
    <columns>Target_Owner__c</columns>
    <columns>Target_Owner_Role_Type__c</columns>
    <columns>Target_Type__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Target_Weight__c</columns>
    <columns>Effective_Start_Period__c</columns>
    <columns>Effective_End_Period__c</columns>
    <columns>Bookings_Target_CY__c</columns>
    <columns>Pipeline_Target_CY__c</columns>
    <columns>Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Target_Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Owner__c</field>
        <operation>contains</operation>
        <value>wanda morrison</value>
    </filters>
    <label>All</label>
</ListView>