force-app/main/default/objects/Target__c/listViews/LATAM.listView-meta.xml
<ListView>
    <fullName>LATAM</fullName>
    <columns>NAME</columns>
    <columns>Target_Year__c</columns>
    <columns>Target_Owner__c</columns>
    <columns>Target_Owner_Role_Type__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Target_Type__c</columns>
    <columns>Target_Is_Active__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Target_Weight__c</columns>
    <columns>Effective_Start_Period__c</columns>
    <columns>Effective_End_Period__c</columns>
    <columns>Bookings_Target_CY__c</columns>
    <columns>Pipeline_Target_CY__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Year__c</field>
        <operation>equals</operation>
        <value>2025</value>
    </filters>
    <filters>
        <field>Target_Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Target_Owner_Region__c</field>
        <operation>equals</operation>
        <value>GI</value>
    </filters>
    <filters>
        <field>Manager__c</field>
        <operation>equals</operation>
        <value>Marcelo Morilla,Vladimir Niño</value>
    </filters>
    <label>LATAM</label>
</ListView>